--- a/src/app/components/contarctAffichage/contractAffichage.component.html
+++ b/src/app/components/contarctAffichage/contractAffichage.component.html
@@ -1,3 +1,10 @@
+<app-header-user></app-header-user>
+	<!-- /HEADER -->
+	 
+	<!-- NAVIGATION -->
+<!-- NAVIGATION -->
+<app-sidebar-front></app-sidebar-front>
+
 <div class="container mt-4">
   <h2 class="mb-3">Mes contrats</h2>
 
@@ -39,3 +46,4 @@
   </table>
 </div>
 <app-chatbot></app-chatbot>
+<app-footer></app-footer>
