--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -1,3 +1,11 @@
+
+<app-header-user></app-header-user>
+	<!-- /HEADER -->
+	 
+	<!-- NAVIGATION -->
+<!-- NAVIGATION -->
+<app-sidebar-front></app-sidebar-front>
+
 <div class="contract">
     <h1>📜 Contrat de Location</h1>
   
@@ -40,4 +48,6 @@
       <button class="download-btn" (click)="downloadContractPdf()">📥 Télécharger le Contrat</button>
     </div>
   </div>
+
+  <app-footer></app-footer>
   
