--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -10,11 +10,11 @@
                     <li><a [routerLink]="'/hotDeals'">Hot Deals</a></li>
                     <li><a [routerLink]="'/categories'">Categories</a></li>
                     <li><a [routerLink]="'/laptops'">Laptops</a></li>
-                    <li><a [routerLink]="'/smartphones'">Smartphones</a></li>
-                    <li><a [routerLink]="'/cameras'">Cameras</a></li>
-                    <li><a [routerLink]="'/accessories'">Accessories</a></li>
                     <li><a [routerLink]="['/commandes/owner', userId]">Mes commandes</a></li>
                     <li><a (click)="goToMyContracts()">Mes contrats</a></li>
+                    <li><a href="/listFeedback">Feedbacks</a></li>
+                    <li><a href="/addFeedback">Add Feedback</a></li>
+                    <li><a href="/specificFeedback">My Feedbacks</a></li>
 
                 </ul>
                 
