--- a/src/app/components/sidebar/sidebar-back.component.html
+++ b/src/app/components/sidebar/sidebar-back.component.html
@@ -63,23 +63,55 @@
         </span>
         <span class="menu-title">Dashboard</span>
       </a>
-    </li>
-    <li class="nav-item menu-items">
-      <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-        <span class="menu-icon">
-          <i class="mdi mdi-laptop"></i>
-        </span>
-        <span class="menu-title">Basic UI Elements</span>
-        <i class="menu-arrow"></i>
-      </a>
-      <div class="collapse" id="ui-basic">
-        <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/buttons.html">Buttons</a></li>
-          <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/dropdowns.html">Dropdowns</a></li>
-          <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/typography.html">Typography</a></li>
-        </ul>
-      </div>
-    </li>
+      <li class="nav-item menu-items">
+        <a class="nav-link" data-bs-toggle="collapse" href="#feedbacks" aria-expanded="false" aria-controls="feedbacks">
+          <span class="menu-icon">
+            <i class="mdi mdi-message-text"></i>
+          </span>
+          <span class="menu-title">Feedbacks</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="feedbacks">
+          <ul class="nav flex-column sub-menu">
+            <li class="nav-item">
+              <a class="nav-link" href="/list-Feedback">
+                List Feedback
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/reported-Feedbacks">
+                Reported Feedback
+              </a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      
+      <!-- Feedback Charts Menu -->
+      <li class="nav-item menu-items">
+        <a class="nav-link" data-bs-toggle="collapse" href="#feedbackCharts" aria-expanded="false" aria-controls="feedbackCharts">
+          <span class="menu-icon">
+            <i class="mdi mdi-chart-bar"></i>
+          </span>
+          <span class="menu-title">Feedback Charts</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="feedbackCharts">
+          <ul class="nav flex-column sub-menu">
+            <li class="nav-item">
+              <a class="nav-link" href="/feedbackschart">
+                Reacts
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/analysechart">
+                Analyse de sentiments
+              </a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      
     <li class="nav-item menu-items">
       <a class="nav-link" href="../../pages/forms/basic_elements.html">
         <span class="menu-icon">
@@ -104,6 +136,15 @@
           <i class="mdi mdi-account-group"></i>
         </span>
         <span class="menu-title">Liste des contrats</span>
+        <i class="menu-arrow"></i>
+      </a>
+    </li>
+    <li class="nav-item menu-items">
+      <a class="nav-link" [routerLink]="['/discounts']">
+        <span class="menu-icon">
+          <i class="mdi mdi-account-group"></i>
+        </span>
+        <span class="menu-title">Liste des Discounts</span>
         <i class="menu-arrow"></i>
       </a>
     </li>
