--- a/src/app/components/commande-list/commande-list.component.html
+++ b/src/app/components/commande-list/commande-list.component.html
@@ -1,3 +1,9 @@
+<app-header-user></app-header-user>
+	<!-- /HEADER -->
+	 
+	<!-- NAVIGATION -->
+<!-- NAVIGATION -->
+<app-sidebar-front></app-sidebar-front>
 <div class="container mt-4">
   <h2>Liste des commandes</h2>
 
@@ -88,3 +94,4 @@
     </div>
   </div>
 </div> 
+<app-footer></app-footer>
