--- a/src/app/components/commande/commande.component.html
+++ b/src/app/components/commande/commande.component.html
@@ -1,3 +1,10 @@
+
+<app-header-user></app-header-user>
+	<!-- /HEADER -->
+	 
+	<!-- NAVIGATION -->
+<!-- NAVIGATION -->
+<app-sidebar-front></app-sidebar-front>
 <div class="container mt-4">
   <div class="section">
     <div class="container">
@@ -81,4 +88,4 @@
     </div>
   </div>
 </div>
-  
+<app-footer></app-footer>
